--- a/lepinguregister/src/main/webapp/i18n/et/home.json
+++ b/lepinguregister/src/main/webapp/i18n/et/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Akteerimine",
+    "title": "Lepinguregister",
     "subtitle": "See on teie avaleht",
     "logged": {
       "message": "Olete sisse logitud kasutajana \"{{username}}\"."
