--- a/akteerimine/src/main/webapp/i18n/en/global.json
+++ b/akteerimine/src/main/webapp/i18n/en/global.json
@@ -137,6 +137,7 @@
     "idexists": "A new {{ entityName }} cannot already have an ID",
     "idnull": "Invalid ID",
     "idinvalid": "Invalid ID",
+    "valuesinvalid": "Invalid values",
     "idnotfound": "ID cannot be found",
     "file": {
       "could.not.extract": "Could not extract file",
